--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"d3": "^7.6.1",
+		"danfojs": "^1.1.2",
 		"plotly.js-dist-min": "^2.16.1",
 		"vercel": "^28.4.17"
 	}
